chore: fix icon alignment

--- a/src/renderer/src/components/TooltipIcon/TooltipIcon.module.css
+++ b/src/renderer/src/components/TooltipIcon/TooltipIcon.module.css
@@ -1,3 +1,7 @@
+.themeIcon {
+  display: flex;
+}
+
 .icon {
   height: 80%;
   width: 80%;
